Interim stage of rebuild - must supply a NodeList, not an array ADDED: Test in DEFAULT.JS to change object before rebuild attempt ADDED: Configurable itemName instead of 'Row:' ADDED: Tooltip to show total number of rows when hovering itemName ADDED: Tooltip to show long text if table truncates ADDED: Rebuild function (stage1)

--- a/Default.css
+++ b/Default.css
@@ -57,6 +57,7 @@ th
     /* Gap around the table - express as % so that table size can be a % value also, and table can scale */
     /* Note: For DynaTables, this MUST be zero, and the margin should go around the containing div element. */
     margin:0px; 
+    font-size:smaller;
     
     empty-cells:show;
     white-space:nowrap;
