Padding added when no rows present, Selection working for multi/single. ADDED: Harness buttons to change view and delete items (delete not hooked up) ADDED: Checkboxes and CSS Checkbox style REFACTOR: Fn addRows() now creates rows ADDED: Get/Set for viewState ADDED: Helper functions for common activities

--- a/Default.css
+++ b/Default.css
@@ -8,7 +8,7 @@
 {
     overflow-y:scroll;
     background-color:#EEEEEE;
-    width:300px; 
+    width:350px; 
     height:400px;
 }
 
@@ -109,4 +109,8 @@ th
 .textboxRowNavigate 
 {
     width:2em;
+}
+
+.checkboxSelect
+{
 }
